tests/errors/malformed-interval.expect
---CODE---
1
---STDERR---
error: Filament Parser:  --> 1:24
  |
1 | component Main<G>(@[G, 3] go: 1) -> () {}
  |                        ^
  |
  = Time expressions must have the form `E+n' where `E' is an event and `n' is a concrete number

